Fix control directions showing in landscape on iphone x

--- a/src/UI/Menu/Menu.css
+++ b/src/UI/Menu/Menu.css
@@ -189,10 +189,13 @@
 }
 
 /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
-@media screen and (max-width:641px){
+@media screen and (max-width:724px){
   .overlay-header-and-controls {
     max-width: 90%; 
   } 
+  .overlay-content-item.hide-in-mobile {
+    display: none;
+  }
 }
 
 
